Increase top spacing of focused anchor, fix "skip to main content" preventing clicking on nav items on mobile

--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -43,7 +43,7 @@ body {
 // and flash it with primary color when jumping to it
 :target:not(#main) {
 	animation: var(--transition-long) 1s highlight-in-out;
-	scroll-margin-top: 15vh;
+	scroll-margin-top: 20vh;
 	color: var(--primary-color);
 	text-shadow: var(--primary-color-alpha) 0 0 4px, var(--primary-color) 0 0 12px;
 
